@@ -1,3 +1,8 @@
+2010-09-02  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/internet-address.c (group_to_string): Don't crash if the
+	group name is unset. Thanks to Damian Pietras for this patch.
+
 2010-09-01  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/gmime-utils.c (g_mime_utils_header_decode_phrase):
